--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,12 +20,19 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      shell: pwsh
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; else pip install -r requirements.txt; fi
+        if (Test-Path -Path "requirements-dev.txt") {
+          pip install -r requirements-dev.txt
+        } else {
+          pip install -r requirements.txt
+        }
     - name: Lint with flake8
       run: |
+        pip install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     - name: Test with pytest
       run: |
+        pip install pytest
         pytest
