--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,3 +11,4 @@ issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 custom: ['https://buymeacoffee.com/djdarcy'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ["https://www.paypal.com/donate?hosted_button_id=5Z6J29AYXDAD8"]
