--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,5 +10,6 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: ['https://buymeacoffee.com/djdarcy'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
-custom: ["https://www.paypal.com/donate?hosted_button_id=5Z6J29AYXDAD8"]
+custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+  - 'https://buymeacoffee.com/djdarcy'
+  - 'https://www.paypal.com/donate?hosted_button_id=ZMRXRVBTYANHG'
