--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,6 +12,7 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://paypal.me/dustindarcy'] 
+# Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
 #  - 'https://buymeacoffee.com/djdarcy'
 #  - 'https://www.paypal.com/donate?hosted_button_id=ZMRXRVBTYANHG'
